trunk/Archive2/ad/47fab753ad97ae/output
main.cpp:8:13: error: member access into incomplete type 'const A'
    int c[a -> b];
            ^
main.cpp:3:8: note: definition of 'A' is not complete until the closing '}'
struct A
       ^
1 error generated.
